--- a/themes/hugo-fresh/layouts/index.html
+++ b/themes/hugo-fresh/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-    {{ if .Site.Params.hero }}
-    {{ partial "hero.html" . }}
+    {{ if .Site.Params.banner }}
+    {{ partial "banner.html" . }}
     {{ end }}
 
     {{ if .Site.Params.section1 }}
