--- a/themes/hugo-fresh/layouts/partials/banner-body.html
+++ b/themes/hugo-fresh/layouts/partials/banner-body.html
@@ -1,9 +1,9 @@
-{{- $hero       := .Site.Params.hero }}
-{{- $title      := index $hero "title" }}
-{{- $subtitle   := index $hero "subtitle" }}
-{{- $buttonText := index $hero "buttontext" }}
-{{- $buttonLink := index $hero "buttonlink" }}
-{{- $image      := index $hero "image" }}
+{{- $banner       := .Site.Params.banner }}
+{{- $title      := index $banner "title" }}
+{{- $subtitle   := index $banner "subtitle" }}
+{{- $buttonText := index $banner "buttontext" }}
+{{- $buttonLink := index $banner "buttonlink" }}
+{{- $image      := index $banner "image" }}
 <div class="hero-body">
   <div class="container">
     <div class="columns is-vcentered">
