--- a/themes/hugo-fresh/layouts/partials/banner.html
+++ b/themes/hugo-fresh/layouts/partials/banner.html
@@ -1,5 +1,5 @@
 <section class="hero is-fullheight is-default is-bold">
   {{ partial "navbar.html" . }}
   {{ partial "navbar-clone.html" . }}
-  {{ partial "hero-body.html" . }}
+  {{ partial "banner-body.html" . }}
 </section>
