--- a/themes/hugo-fresh/assets/bulma/sass/elements/image.sass
+++ b/themes/hugo-fresh/assets/bulma/sass/elements/image.sass
@@ -6,7 +6,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
   img
     display: block
     height: auto
-    width: 100%
+    // width: 100%
     &.is-rounded
       border-radius: $radius-rounded
   // Ratio
