--- a/themes/hugo-fresh/layouts/partials/section1.html
+++ b/themes/hugo-fresh/layouts/partials/section1.html
@@ -1,7 +1,7 @@
-{{- $section1 := .Site.Params.section1 }}
-{{- $title    := index $section1 "title" }}
-{{- $subtitle := index $section1 "subtitle" }}
-{{- $tiles    := index $section1 "tiles" }}
+{{- $section := .Site.Params.section1 }}
+{{- $title    := index $section "title" }}
+{{- $subtitle := index $section "subtitle" }}
+{{- $tiles    := index $section "tiles" }}
 <section class="section section-feature-grey is-medium">
   <div class="container">
     <div class="title-wrapper has-text-centered">
