--- a/themes/hugo-fresh/layouts/partials/section2.html
+++ b/themes/hugo-fresh/layouts/partials/section2.html
@@ -1,28 +1,35 @@
-{{- $section2   := .Site.Params.section2 }}
-{{- $title      := index $section2 "title" }}
-{{- $subtitle   := index $section2 "subtitle" }}
-{{- $image      := index $section2 "image" }}
-{{- $buttonText := index $section2 "buttontext" }}
-{{- $buttonLink := index $section2 "buttonlink" }}
-<section class="section section-feature-grey is-medium">
+{{- $section := .Site.Params.section2 }}
+{{- $title    := index $section "title" }}
+{{- $subtitle := index $section "subtitle" }}
+{{- $features := index $section "features" }}
+<section class="section is-medium">
   <div class="container">
     <div class="columns">
-      <div class="column is-10 is-offset-1">
-        <div class="has-text-centered">
-          <img class="pushed-image" src="{{ printf "/images/%s" $image | relURL }}">
-        </div>
+      <div class="column is-centered-tablet-portrait">
+        <h1 class="title section-title">{{ $title }}</h1>
+        <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3>
+        <div class="divider"></div>
+        <div class="back-image"></div>
+      </div>
+      <div class="column is-7 mt-60">
+        {{- range $features }}
+        <article class="media icon-box">
+          <figure class="media-left">
+            <p class="image">
+              <img src='{{ printf "/images/illustrations/icons/%s.svg" .icon | relURL }}' width="100" />
+            </p>
+          </figure>
+          <div class="media-content mt-20">
+            <div class="content">
+              <p>
+                <span class="icon-box-title">{{ .title }}</span>
+                <span class="icon-box-text">{{ .text | markdownify }}</span>
+              </p>
+            </div>
+          </div>
+        </article>
+        {{- end }}
       </div>
     </div>
-
-    <div class="title-wrapper has-text-centered">
-      <h2 class="title is-2">{{ $title }}</h2>
-      <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3>
-    </div>
-
-    <p class="has-text-centered mt-20">
-      <a class="button cta is-large rounded secondary-btn raised" href="{{ $buttonLink }}">
-        {{ $buttonText }}
-      </a>
-    </p>
   </div>
 </section>
