--- a/themes/hugo-fresh/layouts/partials/section2.html
+++ b/themes/hugo-fresh/layouts/partials/section2.html
@@ -1,7 +1,7 @@
-{{- $section := .Site.Params.section2 }}
-{{- $title    := index $section "title" }}
-{{- $subtitle := index $section "subtitle" }}
-{{- $features := index $section "features" }}
+{{- $section2 := .Site.Params.section2 }}
+{{- $title    := index $section2 "title" }}
+{{- $subtitle := index $section2 "subtitle" }}
+{{- $features := index $section2 "features" }}
 <section class="section is-medium">
   <div class="container">
     <div class="columns">
