--- a/themes/hugo-fresh/layouts/partials/section3.html
+++ b/themes/hugo-fresh/layouts/partials/section3.html
@@ -1,9 +1,9 @@
-{{- $section   := .Site.Params.section3 }}
-{{- $title      := index $section "title" }}
-{{- $subtitle   := index $section "subtitle" }}
-{{- $image      := index $section "image" }}
-{{- $buttonText := index $section "buttontext" }}
-{{- $buttonLink := index $section "buttonlink" }}
+{{- $section3   := .Site.Params.section3 }}
+{{- $title      := index $section3 "title" }}
+{{- $subtitle   := index $section3 "subtitle" }}
+{{- $image      := index $section3 "image" }}
+{{- $buttonText := index $section3 "buttontext" }}
+{{- $buttonLink := index $section3 "buttonlink" }}
 <section class="section section-feature-grey is-medium">
   <div class="container">
     <div class="columns">
