--- a/themes/hugo-fresh/assets/bulma/sass/elements/content.sass
+++ b/themes/hugo-fresh/assets/bulma/sass/elements/content.sass
@@ -1,6 +1,7 @@
 $content-heading-color: $text-strong !default
 $content-heading-weight: $weight-semibold !default
 $content-heading-line-height: 1.125 !default
+$content-heading-margin: 1.5em 1.5em !default
 
 $content-blockquote-background-color: $background !default
 $content-blockquote-border-left: 5px solid $border !default
@@ -41,6 +42,7 @@ $content-table-foot-cell-color: $text-strong !default
     color: $content-heading-color
     font-weight: $content-heading-weight
     line-height: $content-heading-line-height
+    margin: $content-heading-margin
   h1
     font-size: 2em
     margin-bottom: 0.5em
