add content, fix style

--- a/themes/hugo-fresh/assets/bulma/sass/components/tabs.sass
+++ b/themes/hugo-fresh/assets/bulma/sass/components/tabs.sass
@@ -130,7 +130,8 @@ $tabs-toggle-link-active-color: $link-invert !default
           border-color: $tabs-toggle-link-active-border-color
           color: $tabs-toggle-link-active-color
           z-index: 1
-    ul
+    ul,
+    ol
       border-bottom: none
     &.is-toggle-rounded
       li
