--- a/themes/hugo-fresh/assets/bulma/sass/elements/content.sass
+++ b/themes/hugo-fresh/assets/bulma/sass/elements/content.sass
@@ -72,11 +72,13 @@ $content-table-foot-cell-color: $text-strong !default
     border-left: $content-blockquote-border-left
     padding: $content-blockquote-padding
   ol
-    list-style: decimal outside
+    list-style: decimal
+    list-style-position: inside
     margin-left: 2em
     margin-top: 1em
   ul
-    list-style: disc outside
+    list-style: disc
+    list-style-position: inside
     margin-left: 2em
     margin-top: 1em
     ul
