add simplified/traditional chinese

--- a/themes/hugo-fresh/layouts/partials/navbar.html
+++ b/themes/hugo-fresh/layouts/partials/navbar.html
@@ -51,6 +51,9 @@
         {{- end }}
 
         <div class="navbar-end">
+          <a href="javascript:;" id="switchChinese" class="navbar-item">切換中文
+          </a>
+          
           {{- range $navbar }}
           {{- if .sublinks }}
           <div class="navbar-item has-dropdown is-hoverable">
