--- a/themes/hugo-fresh/layouts/partials/javascript.html
+++ b/themes/hugo-fresh/layouts/partials/javascript.html
@@ -3,3 +3,7 @@
 <script src="{{ "js/fresh.js" | relURL }}"></script>
 <script src="{{ "js/jquery.panelslider.min.js" | relURL }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+<script src="{{ "js/chinese.js" | relURL }}"></script>
+<script type="text/javascript">
+  Translate.BindObj('switchChinese', '简体中文', '简体中文');
+</script>
