--- a/themes/hugo-fresh/assets/fresh/partials/_footer.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_footer.scss
@@ -24,6 +24,7 @@ footer.footer-dark {
         ul.link-list {
             line-height: 40px;
             font-size: 1.1rem;
+            list-style: none;
             a {
                 color: $light-blue-grey;
                 font-weight: 400;
