--- a/themes/hugo-fresh/assets/bulma/sass/base/generic.sass
+++ b/themes/hugo-fresh/assets/bulma/sass/base/generic.sass
@@ -68,6 +68,10 @@ a
   &:hover
     color: $link-hover
 
+p
+  margin-top: 0.5rem
+  margin-bottom: 0.5rem
+
 code
   background-color: $code-background
   color: $code
