--- a/themes/hugo-fresh/assets/bulma/sass/base/minireset.sass
+++ b/themes/hugo-fresh/assets/bulma/sass/base/minireset.sass
@@ -16,13 +16,7 @@ legend,
 textarea,
 pre,
 iframe,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6
+hr
   margin: 0
   padding: 0
 
@@ -34,11 +28,6 @@ h4,
 h5,
 h6
   font-size: 100%
-  font-weight: normal
-
-// List
-ul
-  list-style: none
 
 // Form
 button,
