--- a/themes/hugo-fresh/layouts/partials/javascript.html
+++ b/themes/hugo-fresh/layouts/partials/javascript.html
@@ -17,3 +17,4 @@
     s.parentNode.insertBefore(w,s)
   })();
 </script>
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "c209941d20034c2b8e9675252b804eae"}'></script>
